# techco-backend-api

./: .gitignore  README.md  local.py  openapi.yml  pyproject.toml  serverless.yml  test.py
.code_quality/: black.toml  flake8.ini  isort.cfg  pre_commit_config.yaml
.code_quality/scripts/: format_code.sh  lint_code.sh  run_quality_checks.sh
.dev/: docker-compose.yml  document-db-connection.md  mongodb-keyfile
.github/workflows/: build_and_test.yml  deploy_dev.yml  deploy_prod.yml
src/constants/: index.py
src/constants/assistants/: index.py
src/constants/auth/: index.py
src/constants/business/: configuration.py
src/constants/hiring_process/: configuration.py
src/constants/notification/: configuration.py
src/constants/position/: configuration.py
src/constants/prompts/: profile_filter.py
src/db/: constants.py  database_client.py  decorators.py
src/domain/: assistant.py  base_entity.py  business.py  hiring_process.py  notification.py  position.py  position_configuration.py  profile.py  profile_brightdata.py  profile_evaluation.py  role.py  user.py  vacancy.py
src/domain/defaults/: business.py
src/errors/: entity_not_found.py
src/models/openai/: index.py
src/models/pipefy/: card.py  phase.py  pipe.py  webhook.py
src/poc/data/: profiles.json
src/repositories/: repository.py
src/repositories/document_db/: business_repository.py  client.py  hiring_process_repository.py  notification_repository.py  position.py  position_configuration_repository.py  position_repository.py  profile_filter_process.py  user_repository.py  utils.py  vacancy.py
src/repositories/pipefy/: card_repository.py  phase_repository.py  pipe_repository.py  webhook_repository.py
src/repositories/s3/: filter_profile.py
src/repositories/scraping/: bright_data_dataset_repository.py  scraping_profile_filter_process.py
src/utils/: authorization.py  errors.py  files.py  index.py  prompt.py  secrets.py  send_chat_message_by_websocket.py  send_event_SQS.py  send_message_by_websocket.py  send_notification_by_websocket.py
tests/use_cases/: test_create_user.py  test_get_user.py  test_update_user_data.py  test_update_user_status.py
(+203 files in other folders)
